[package]
name = "typst-precompiler"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
description = "Precompile Typst documents."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]
typst-ts-core = { path = "../core" }

typst = { git = "https://github.com/typst/typst.git" }
typst-library = { git = "https://github.com/typst/typst.git" }
comemo = "0.2"

once_cell = "1.17.1"
siphasher = "0.3.10"

append-only-vec = "0.1.2"
elsa = "1.8.0"
memmap2 = "0.5"
dirs = "4"
walkdir = "2"
same-file = "1"
codespan-reporting = "0.11"
parking_lot = "0.12.1"

