[package]
name = "typst-ts-bench-lowering"
description = "Lowering bench for Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
divan = "0.1.3"
typst.workspace = true
once_cell.workspace = true
reflexo-typst2vec.workspace = true
reflexo-typst = { workspace = true, features = [
    "flat-vector",
    "system",
    "dynamic-layout",
] }
typst-ts-cli.workspace = true
comemo.workspace = true

[[bench]]
name = "typst-ts-bench-lowering"
path = "src/lowering.rs"
harness = false

[features]
the-thesis = []
