[package]
name = "typst-ts-dev-server"
version = "0.1.6"
license = "Apache-2.0"
edition = "2021"
description = "Dev Server for Typst.ts."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]
typst-ts-core = "0.1"

once_cell = "1.17.1"
env_logger = "0.10.0"
log = "0.4.17"

clap = { version = "4.2", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.2"
clap_complete_fig = "4.2"
