[package]
name = "typst-ts-dev-server"
version = "0.1.6"
license = "Apache-2.0"
edition = "2021"
description = "Dev Server for Typst.ts."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]
typst-ts-core = "0.1"

once_cell.workspace = true
env_logger.workspace = true
log.workspace = true

clap = { workspace = true, features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete.workspace = true
clap_complete_fig.workspace = true
