[package]
name = "typst-ts-fontctl"
version = "0.1.5"
license = "Apache-2.0"
edition = "2021"
description = "Font control for Typst.ts."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]

cmd_lib = "1.3.0"
anyhow = "1"
tempfile = "3"
sha2 = "0.10.6"
hex = "0.4.3"

clap = { version = "4.2", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.2"
clap_complete_fig = "4.2"
