[package]
name = "typst-ts-fontctl"
version = "0.1.6"
license = "Apache-2.0"
edition = "2021"
description = "Font control for Typst.ts."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]

cmd_lib = "1.3.0"
anyhow.workspace = true
tempfile = "3"
sha2.workspace = true
hex.workspace = true

clap = { workspace = true, features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete.workspace = true
clap_complete_fig.workspace = true
