[package]
name = "typst-ts-core"
description = "Core function of Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typst.workspace = true
typst-pdf = { workspace = true, optional = true }

reflexo-typst2vec.workspace = true
reflexo.workspace = true
reflexo-vfs.workspace = true
reflexo-world.workspace = true
comemo.workspace = true

ecow.workspace = true
fxhash.workspace = true

once_cell.workspace = true

serde.workspace = true
serde_json.workspace = true
log.workspace = true
rayon.workspace = true
rkyv = { workspace = true, optional = true }
ansi_term = { workspace = true, optional = true }

js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console"] }

codespan-reporting.workspace = true


dirs = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
fontdb = { workspace = true, optional = true }
notify = { workspace = true, optional = true }

indexmap.workspace = true
fst.workspace = true
nohash-hasher.workspace = true
pathdiff.workspace = true
tar.workspace = true

typst-ts-svg-exporter = { workspace = true, optional = true }

[features]

default = ["full"]
full = ["system", "web", "dynamic-layout", "glyph2vec", "flat-vector"]
system = ["system-compile", "system-watch"]
web = ["web-render", "browser-compile"]

flat-vector = ["reflexo/flat-vector"]

lazy-fontdb = []
experimental-ligature = ["typst-ts-svg-exporter/experimental-ligature"]
no-content-hint = ["reflexo-typst2vec/no-content-hint"]
glyph2vec = ["reflexo-typst2vec/glyph2vec"]
dynamic-layout = ["dep:typst-ts-svg-exporter"]

system-compile = ["glyph2vec", "reflexo-vfs/system", "reflexo-world/system"]
system-watch = ["dep:notify", "dep:tokio"]
browser-compile = [
    "__web",
    "web-render",
    "glyph2vec",
    "reflexo-vfs/browser",
    "reflexo-world/browser",
]
browser-embedded-fonts = ["__web"]
__web = ["dep:js-sys", "dep:web-sys"]
__web_render = ["__web", "reflexo-vfs/web", "reflexo-world/web"]
web-render = ["__web_render"]

ast = ["ansi_term"]
pdf = ["typst-pdf"]
svg = ["dep:typst-ts-svg-exporter"]
