[package]
name = "reflexo-vfs"
description = "Vfs for reflexo."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
reflexo.workspace = true
append-only-vec.workspace = true
parking_lot.workspace = true
nohash-hasher.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true

wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[features]

web = [
    "wasm-bindgen",
    "web-sys",
    "js-sys"
]
browser = [
    "web"
]
system = []
