[package]
name = "reflexo-world"
description = "World for reflexo."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
typst-ts-core.workspace = true
reflexo.workspace = true
reflexo-vfs.workspace = true
append-only-vec.workspace = true
parking_lot.workspace = true
nohash-hasher.workspace = true
once_cell.workspace = true
rustc-hash.workspace = true
indexmap.workspace = true
dashmap.workspace = true
log.workspace = true
chrono.workspace = true
serde.workspace = true
comemo.workspace = true
codespan-reporting.workspace = true
flate2.workspace = true
tar.workspace = true
dirs.workspace = true
serde_json.workspace = true
fontdb.workspace = true
sha2.workspace = true
hex.workspace = true
strum.workspace = true

wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }

[target.'cfg(not(any(target_arch = "riscv64", target_arch = "wasm32", all(target_os = "windows", target_arch = "aarch64"))))'.dependencies]
reqwest = { version = "^0.11", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "multipart",
] }

[target.'cfg(any(target_arch = "riscv64", all(target_os = "windows", target_arch = "aarch64")))'.dependencies]
reqwest = { version = "^0.11", default-features = false, features = [
    "native-tls",
    "blocking",
    "multipart",
] }

[features]

default = []
web = ["wasm-bindgen", "web-sys", "js-sys", "serde-wasm-bindgen"]
browser = ["web"]
system = []
