[package]
name = "reflexo"
description = "A portable format to show (typst) document in web browser."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tiny-skia-path.workspace = true

comemo.workspace = true
path-clean.workspace = true

bitvec = { version = "1" }
dashmap = { version = "5" }
ecow.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

base64.workspace = true
fxhash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_repr = "0.1"
serde_json.workspace = true
serde_with.workspace = true
siphasher.workspace = true
rkyv = { workspace = true, optional = true }

wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }

[dev-dependencies]
hex.workspace = true

[features]
rkyv = ["dep:rkyv", "rkyv/alloc", "rkyv/archive_le"]
rkyv-validation = ["dep:rkyv", "rkyv/validation"]
flat-vector = ["rkyv", "rkyv-validation"]

__web = ["dep:wasm-bindgen", "dep:js-sys"]
web = ["__web"]
full = ["web", "flat-vector"]
default = ["full"]
