[package]
name = "typst-ts-ast-exporter"
version = "0.2.0"
license = "Apache-2.0"
edition = "2021"
description = "Dump Typst ast to specific format."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]

typst.workspace = true
typst-ts-core.workspace = true

ansi_term = "0.12.1"
