[package]
name = "typst-ts-canvas-exporter"
description = "Export a frame of Typst document into canvas element."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
comemo.workspace = true

tiny-skia.workspace = true
ttf-parser.workspace = true
flate2.workspace = true
once_cell.workspace = true
data-url = "0.2.0"
async-recursion = "1.0.4"
wasm-bindgen-futures.workspace = true
elsa.workspace = true

wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "CanvasRenderingContext2d",
    "Path2d",
    "Blob",
    "ImageData",
    "HtmlImageElement",
    "HtmlElement",
    "Url",
    "BlobPropertyBag",
    "DomParser",
    "SupportedType",
    "HtmlCollection",
] }

typst-ts-core.workspace = true
