[package]
name = "typst-ts-canvas-exporter"
description = "Export a frame of Typst document into canvas element."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
comemo.workspace = true

tiny-skia.workspace = true
ttf-parser.workspace = true
flate2.workspace = true
once_cell.workspace = true
data-url.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
wasm-bindgen-futures.workspace = true
elsa.workspace = true
base64.workspace = true

log.workspace = true

wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "CanvasRenderingContext2d",
    "Path2d",
    "Blob",
    "ImageData",
    "HtmlImageElement",
    "HtmlDivElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "Url",
    "BlobPropertyBag",
    "DomParser",
    "SupportedType",
    "HtmlCollection",
    "Performance",
    "Window",
    "Document",
] }

typst-ts-core.workspace = true
