[package]
name = "typst-ts-dom-exporter"
description = "Export a frame of Typst document into dom element."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

once_cell.workspace = true

typst.workspace = true
comemo.workspace = true

svgtypes.workspace = true
tiny-skia.workspace = true
tiny-skia-path.workspace = true
base64.workspace = true

typst-ts-core.workspace = true
reflexo-vec2canvas.workspace = true
reflexo-vec2sema.workspace = true
reflexo-vec2bbox.workspace = true
typst-ts-svg-exporter.workspace = true
log.workspace = true
siphasher.workspace = true
rayon.workspace = true
async-recursion.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

js-sys.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Path2d",
    "Blob",
    "HtmlDivElement",
    "HtmlTemplateElement",
    "SvgElement",
    "SvgGraphicsElement",
    "SvgsvgElement",
    "SvgMatrix",
    "SvgRect",
    "DomRect",
    "HtmlElement",
    "Url",
    "BlobPropertyBag",
    "SupportedType",
    "HtmlCollection",
    "Performance",
    "DocumentFragment",
    "Window",
    "Document",
    "CssStyleDeclaration",
] }

[features]
default = []
# "debug_repaint", "debug_repaint_svg", "debug_repaint_canvas"
experimental-ligature = ["typst-ts-core/experimental-ligature"]
aggresive-browser-rasterization = []
debug_repaint = []
debug_repaint_svg = []
debug_repaint_canvas = []
debug_repaint_semantics = []
debug_recalc_stage = []
debug_attach = []
debug_relayout = []
