[package]
name = "typst-ts-raster-exporter"
description = "Export a frame of Typst document into a raster image."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
comemo.workspace = true

image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
] }
usvg = { version = "0.32", default-features = false, features = ["text"] }
tiny-skia.workspace = true
ttf-parser.workspace = true
roxmltree = "0.18"
bytemuck = "1"
pixglyph = "0.1"
flate2.workspace = true
resvg = { version = "0.32", default-features = false }
