[package]
name = "typst-ts-raster-exporter"
description = "Export a frame of Typst document into a raster image."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
comemo.workspace = true

image.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
ttf-parser.workspace = true
roxmltree.workspace = true
bytemuck.workspace = true
pixglyph.workspace = true
flate2.workspace = true
resvg.workspace = true
