[package]
name = "typst-ts-svg-exporter"
description = "Export a frame of Typst document into svg element."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
comemo.workspace = true

tiny-skia.workspace = true
base64.workspace = true

typst-ts-core.workspace = true
log.workspace = true
siphasher.workspace = true

[features]
experimental-ligature = ["typst-ts-core/experimental-ligature"]
rkyv = ["typst-ts-core/rkyv"]
flat-vector = ["rkyv", "typst-ts-core/flat-vector"]
default = ["flat-vector"]
