[package]
name = "typst-ts-tir-exporter"
version = "0.1.6"
license = "Apache-2.0"
edition = "2021"
description = "Export a frame of Typst Artifact into tir formats."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]

typst = "0.3.0"
typst-ts-core = "0.1.6"

serde = "1.0.159"
serde_json = "1.0.95"

byteorder = "1.4.3"
