[package]
name = "typst-ts-tir-exporter"
version = "0.1.6"
license = "Apache-2.0"
edition = "2021"
description = "Export a frame of Typst Artifact into tir formats."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]

typst.workspace = true

serde.workspace = true
serde_json.workspace = true

byteorder.workspace = true

typst-ts-core = "0.1"
