[package]
name = "typst-ts-tir-exporter"
description = "Export a frame of Typst Artifact into tir formats."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true

serde.workspace = true
serde_json.workspace = true

byteorder.workspace = true

typst-ts-core.workspace = true
