[package]
name = "typst-ts-ws-exporter"
version = "0.1.6"
license = "Apache-2.0"
edition = "2021"
description = "streaming typst documents to a websocket channel."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]

typst = "0.3.0"
typst-ts-core = "0.1"

anyhow = "1"

futures = "0.3.28"
tokio = {version = "1.27.0", features = ["full"]}
tokio-tungstenite = "0.18.0"

env_logger = "0.10.0"
log = "0.4.17"

serde = "1.0.159"
serde_json = "1.0.95"
