[package]
name = "typst-ts-ws-exporter"
version = "0.1.6"
license = "Apache-2.0"
edition = "2021"
description = "streaming typst documents to a websocket channel."
repository = "https://github.com/Myriad-Dreamin/typst.ts"

[dependencies]

typst.workspace = true

anyhow.workspace = true

futures = "0.3.28"
tokio.workspace = true
tokio-tungstenite = "0.18.0"

env_logger.workspace = true
log.workspace = true

serde.workspace = true
serde_json.workspace = true

typst-ts-core.workspace = true
