[package]
name = "typst-ts-ws-exporter"
description = "streaming typst documents to a websocket channel."
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true

anyhow.workspace = true

futures = "0.3.28"
tokio.workspace = true
tokio-tungstenite = "0.18.0"

env_logger.workspace = true
log.workspace = true

serde.workspace = true
serde_json.workspace = true

typst-ts-core.workspace = true
