[package]
name = "typst-ts-incremental-fuzzer"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typst.workspace = true
typst-syntax.workspace = true
comemo.workspace = true

sha2.workspace = true
anyhow.workspace = true
tokio.workspace = true

rand = "0.8.5"
rand_xoshiro = "0.6.0"

reflexo-typst2vec.workspace = true
typst-ts-dev-server.workspace = true
typst-ts-test-common.workspace = true
typst-ts-core.workspace = true
hex.workspace = true
typst-ts-svg-exporter.workspace = true

[features]
generate = []
