[package]
name = "typst-ts-dev-server"
description = "Dev Server for Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
typst-ts-core.workspace = true

once_cell.workspace = true
env_logger.workspace = true
log.workspace = true

clap = { workspace = true, features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete.workspace = true
clap_complete_fig.workspace = true
