[package]
name = "typst-ts-dev-server"
description = "Dev Server for Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reflexo-typst.workspace = true
typst-ts-cli.workspace = true
typst-dev-assets = { workspace = true }

env_logger.workspace = true
log.workspace = true

tokio.workspace = true
warp = { version = "0.3", features = ["compression"] }

clap = { workspace = true, features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete.workspace = true
clap_complete_fig.workspace = true
