[package]
name = "typst-ts-remote-server"
description = "Remote Server for Typst.ts."
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
comemo.workspace = true

futures.workspace = true
tokio.workspace = true

clap = { workspace = true, features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete.workspace = true
clap_complete_fig.workspace = true

tokio-tungstenite.workspace = true

serde.workspace = true
serde_json.workspace = true

env_logger.workspace = true
log.workspace = true

typst-ts-core.workspace = true
typst-ts-compiler.workspace = true
