[package]
name = "typst-ts-docs-test"
description = "Tests for documentation examples"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
walkdir.workspace = true
rayon.workspace = true
anyhow.workspace = true
reflexo-typst = { workspace = true, features = ["system"] }
clap.workspace = true
typst.workspace = true
tokio.workspace = true
