[package]
name = "typst-ts-heap-profile-test"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
comemo.workspace = true

sha2.workspace = true
anyhow.workspace = true
tokio.workspace = true

dhat = "0.3.2"
typst-ts-dev-server.workspace = true
typst-ts-test-common.workspace = true
reflexo-typst.workspace = true

[features]
dhat-heap = []
default = ["dhat-heap"]
