[package]
name = "typst-ts-incremental-test"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
comemo.workspace = true

sha2.workspace = true
anyhow.workspace = true
tokio.workspace = true

reflexo-typst2vec.workspace = true
typst-ts-dev-server.workspace = true
typst-ts-test-common.workspace = true
typst-ts-core.workspace = true
hex.workspace = true
typst-ts-compiler.workspace = true
typst-ts-svg-exporter.workspace = true

[features]
generate = []
pku-thesis = []
